add link new pages

--- a/pembayaran.html
+++ b/pembayaran.html
@@ -52,23 +52,31 @@
           <a class="nav-link" href="petani.html">Petani</a>
           </li>
           <li class="nav-item active dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="" id="transactionDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Transaksi<span class="sr-only">(current)</span>
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="transactionDropdown">
                 <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
                 <a class="dropdown-item" href="list-penerimaan-tbs.html">Daftar Penerimaan TBS</a>
                 <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
                 <a class="dropdown-item" href="approval-penerimaan-petani.html">Approval Penerimaan Dari Petani</a>
-                <a class="dropdown-item" href="">Pembayaran</a>
+                <a class="dropdown-item active" href="">Pembayaran</a>
                 <a class="dropdown-item" href="list-hutang.html">Daftar Hutang</a>
             </div>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="list-harga.html">List Harga</a>
           </li>
-          <li class="nav-item">
-          <a class="nav-link" href="report.html">Report</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="" id="reportDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Report
+            </a>
+            <div class="dropdown-menu" aria-labelledby="reportDropdown">
+                <a class="dropdown-item" href="report-supplier.html">Report Supplier</a>
+                <a class="dropdown-item" href="report-pembayaran.html">Report Pembayaran</a>
+                <a class="dropdown-item" href="report-trace.html">Report Tracebility</a>
+                <a class="dropdown-item" href="report-hutang.html">Report Hutang</a>
+            </div>
           </li>
         </ul>
         <!-- Notif -->
