--- a/profile.html
+++ b/profile.html
@@ -53,24 +53,31 @@
             <a class="nav-link" href="petani.html">Petani</a>
             </li>
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="transactionDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Transaksi
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
-                <a class="dropdown-item" href="list-penerimaan-tbs.html">Daftar Penerimaan TBS</a>
-                <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
-                <a class="dropdown-item" href="approval-penerimaan-petani.html">Approval Penerimaan Dari Petani</a>
-                <a class="dropdown-item" href="pembayaran.html">Pembayaran</a>
-                <a class="dropdown-item" href="list-hutang.html">Daftar Hutang</a>
-            </div>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="list-harga.html">List Harga</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="report.html">Report <span class="sr-only">(current)</span></a>
-            </li>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="transactionDropdown">
+                  <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
+                  <a class="dropdown-item" href="list-penerimaan-tbs.html">Daftar Penerimaan TBS</a>
+                  <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
+                  <a class="dropdown-item" href="approval-penerimaan-petani.html">Approval Penerimaan Dari Petani</a>
+                  <a class="dropdown-item" href="pembayaran.html">Pembayaran</a>
+                  <a class="dropdown-item" href="list-hutang.html">Daftar Hutang</a>
+              </div>
+              <li class="nav-item">
+              <a class="nav-link" href="list-harga.html">List Harga</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="reportDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Report
+                </a>
+                <div class="dropdown-menu" aria-labelledby="reportDropdown">
+                    <a class="dropdown-item" href="report-supplier.html">Report Supplier</a>
+                    <a class="dropdown-item" href="report-pembayaran.html">Report Pembayaran</a>
+                    <a class="dropdown-item" href="report-trace.html">Report Tracebility</a>
+                    <a class="dropdown-item" href="report-hutang.html">Report Hutang</a>
+                </div>
+              </li>
         </ul>
         <!-- Notif -->
         <ul class="navbar-nav ml-auto">
@@ -113,14 +120,14 @@
                         <i class="fa fa-ellipsis-h"></i></a>
                 </div>
             </li>
-            <li class="nav-item dropdown no-arrow">
+            <li class="nav-item dropdown no-arrow active">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img class="img-profile rounded-circle mr-1" width="24px" height="24px" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
                     <span class="mr-3 d-none d-lg-inline font-weight-normal">Valerie Luna</span>
                 </a>
                 <!-- Dropdown - User Information -->
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="">
+                    <a class="dropdown-item active" href="">
                     Profile
                     </a>
                     <a class="dropdown-item" href="settings.html">
