--- a/report-hutang.html
+++ b/report-hutang.html
@@ -53,10 +53,10 @@
             <a class="nav-link" href="petani.html">Petani</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="" id="transactionDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Transaksi
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="transactionDropdown">
                 <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
                 <a class="dropdown-item" href="list-penerimaan-tbs.html">Daftar Penerimaan TBS</a>
                 <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
@@ -68,8 +68,16 @@
           <li class="nav-item">
             <a class="nav-link" href="list-harga.html">List Harga</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="">Report <span class="sr-only">(current)</span></a>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="" id="reportDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Report
+            </a>
+            <div class="dropdown-menu" aria-labelledby="reportDropdown">
+                <a class="dropdown-item" href="report-supplier.html">Report Supplier</a>
+                <a class="dropdown-item" href="report-pembayaran.html">Report Pembayaran</a>
+                <a class="dropdown-item" href="report-trace.html">Report Tracebility</a>
+                <a class="dropdown-item active" href="report-hutang.html">Report Hutang</a>
+            </div>
           </li>
         </ul>
         <!-- Notif -->
