--- a/report-pembayaran.html
+++ b/report-pembayaran.html
@@ -74,7 +74,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="reportDropdown">
                 <a class="dropdown-item" href="report-supplier.html">Report Supplier</a>
-                <a class="dropdown-item active" href="report-pembayaran.html">Report Pembayaran</a>
+                <a class="dropdown-item active" href="">Report Pembayaran</a>
                 <a class="dropdown-item" href="report-trace.html">Report Tracebility</a>
                 <a class="dropdown-item" href="report-hutang.html">Report Hutang</a>
             </div>
@@ -154,7 +154,7 @@
         <div aria-label="breadcrumb" class="row">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">Report</li>
-            <li class="breadcrumb-item active" aria-current="page"></li>
+            <li class="breadcrumb-item active" aria-current="page">Report Pembayaran</li>
           </ol>
         </div>
       </div>
@@ -188,33 +188,37 @@
               <thead>
               <tr>
                 <th>No</th>
-                <th>No. Invoice</th>
-                <th>Supplier</th>
-                <th>Tanggal</th>
-                <th>Jumlah</th>
+                <th>Nama Supplier</th>
+                <th>Tanggal Pembayaran</th>
+                <th>Tonase</th>
+                <th>Nominal</th>
+                <th>Informasi Rekening</th>
               </tr>
               </thead>
               <tbody>
               <tr>
                 <td>1</td>
-                <td>INV/20200804/XX/VIII/597807677</td>
                 <td>Marwan</td>
                 <td>08/09/2020</td>
-                <td>Rp 2.399.898,88</td>
+                <td>9.851 Kg</td>
+                <td>Rp 10.638.092,00</td>
+                <td>BCA - 1609092929</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>INV/20200804/XX/VIII/597807688</td>
                 <td>Rahmawati</td>
                 <td>07/09/2020</td>
-                <td>Rp 4.335.898,88</td>
+                <td>20.000 Kg</td>
+                <td>Rp 37.840.000,00</td>
+                <td>Mandiri - 128900919020</td>
               </tr>
               <tr>
                 <td>3</td>
-                <td>INV/20200804/XX/VIII/597801123</td>
                 <td>Irwan</td>
                 <td>06/09/2020</td>
-                <td>Rp 1.902.222,46</td>
+                <td>13.780 Kg</td>
+                <td>Rp 26.071.760,00</td>
+                <td>BRI - 12902139843998</td>
               </tr>
               
               </tbody>
