--- a/report-supplier.html
+++ b/report-supplier.html
@@ -73,7 +73,7 @@
               Report
             </a>
             <div class="dropdown-menu" aria-labelledby="reportDropdown">
-                <a class="dropdown-item active" href="report-supplier.html">Report Supplier</a>
+                <a class="dropdown-item active" href="">Report Supplier</a>
                 <a class="dropdown-item" href="report-pembayaran.html">Report Pembayaran</a>
                 <a class="dropdown-item" href="report-trace.html">Report Tracebility</a>
                 <a class="dropdown-item" href="report-hutang.html">Report Hutang</a>
@@ -154,7 +154,7 @@
         <div aria-label="breadcrumb" class="row">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">Report</li>
-            <li class="breadcrumb-item active" aria-current="page"></li>
+            <li class="breadcrumb-item active" aria-current="page">Report Supplier</li>
           </ol>
         </div>
       </div>
@@ -178,7 +178,7 @@
 
           <div class="card-body">
             <div class="font-title col-md-12 mb-3">
-              <h6 class="no-margin">Report Pembayaran</h6>
+              <h6 class="no-margin">Report Supplier</h6>
             </div>
             <div class="ml-auto mb-3 no-padding">
               <a class="btn btn-secondary mr-2" data-toggle="" data-target="">Export Excel</a>
@@ -188,33 +188,41 @@
               <thead>
               <tr>
                 <th>No</th>
-                <th>No. Invoice</th>
-                <th>Supplier</th>
-                <th>Tanggal</th>
-                <th>Jumlah</th>
+                <th>Nama Supplier</th>
+                <th>Potensi Produksi</th>
+                <th>Produksi Aktual Diterima</th>
+                <th>Alamat</th>
+                <th>Tahun Tanam</th>
+                <th>Jenis Bibit</th>
               </tr>
               </thead>
               <tbody>
               <tr>
                 <td>1</td>
-                <td>INV/20200804/XX/VIII/597807677</td>
                 <td>Marwan</td>
-                <td>08/09/2020</td>
-                <td>Rp 2.399.898,88</td>
+                <td>10.000 Kg</td>
+                <td>9.851 Kg</td>
+                <td>Seurebok Teungoh</td>
+                <td>2011</td>
+                <td>Lonsum</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>INV/20200804/XX/VIII/597807688</td>
                 <td>Rahmawati</td>
-                <td>07/09/2020</td>
-                <td>Rp 4.335.898,88</td>
+                <td>20.000 Kg</td>
+                <td>20.000 Kg</td>
+                <td>Seurebok Teungoh</td>
+                <td>2010</td>
+                <td>Lonsum</td>
               </tr>
               <tr>
                 <td>3</td>
-                <td>INV/20200804/XX/VIII/597801123</td>
                 <td>Irwan</td>
-                <td>06/09/2020</td>
-                <td>Rp 1.902.222,46</td>
+                <td>15.000 Kg</td>
+                <td>13.780 Kg</td>
+                <td>Seurebok Teungoh</td>
+                <td>2010</td>
+                <td>Lonsum</td>
               </tr>
               
               </tbody>
