--- a/report-trace.html
+++ b/report-trace.html
@@ -75,7 +75,7 @@
             <div class="dropdown-menu" aria-labelledby="reportDropdown">
                 <a class="dropdown-item" href="report-supplier.html">Report Supplier</a>
                 <a class="dropdown-item" href="report-pembayaran.html">Report Pembayaran</a>
-                <a class="dropdown-item active" href="report-trace.html">Report Tracebility</a>
+                <a class="dropdown-item active" href="">Report Tracebility</a>
                 <a class="dropdown-item" href="report-hutang.html">Report Hutang</a>
             </div>
           </li>
@@ -154,7 +154,7 @@
         <div aria-label="breadcrumb" class="row">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">Report</li>
-            <li class="breadcrumb-item active" aria-current="page"></li>
+            <li class="breadcrumb-item active" aria-current="page">Report Tracebility</li>
           </ol>
         </div>
       </div>
@@ -178,7 +178,7 @@
 
           <div class="card-body">
             <div class="font-title col-md-12 mb-3">
-              <h6 class="no-margin">Report Pembayaran</h6>
+              <h6 class="no-margin">Report Tracebility</h6>
             </div>
             <div class="ml-auto mb-3 no-padding">
               <a class="btn btn-secondary mr-2" data-toggle="" data-target="">Export Excel</a>
@@ -188,33 +188,53 @@
               <thead>
               <tr>
                 <th>No</th>
-                <th>No. Invoice</th>
-                <th>Supplier</th>
-                <th>Tanggal</th>
-                <th>Jumlah</th>
+                <th>Nama Supplier</th>
+                <th>Potensi Produksi</th>
+                <th>Produksi Aktual Diterima</th>
+                <th>Alamat</th>
+                <th>Tahun Tanam</th>
+                <th>Jenis Bibit</th>
+                <th>Kepemilikan Lahan</th>
+                <th>Luas Lahan</th>
+                <th>Keberlanjutan Lahan</th>
               </tr>
               </thead>
               <tbody>
               <tr>
                 <td>1</td>
-                <td>INV/20200804/XX/VIII/597807677</td>
-                <td>Marwan</td>
-                <td>08/09/2020</td>
-                <td>Rp 2.399.898,88</td>
+                <td>Sarman <span class="fa fa-check-circle green ml-2"></span></td>
+                <td>10.000 Kg</td>
+                <td>9.851 Kg</td>
+                <td>Seureubok Teungoh</td>
+                <td>2011</td>
+                <td>Lonsum</td>
+                <td>SHM - 339090930990<br>SHM - 890028889009<br>SHM - 339090878922</td>
+                <td>1.000 Hektar<br>1.253 Hektar<br>1.400 Hektar</td>
+                <td>LP2B - 12893777 - Sep 2020<br>LP2B - 87129902 - Sep 2021<br>LP2B - 127718297 - Sep 2024</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>INV/20200804/XX/VIII/597807688</td>
-                <td>Rahmawati</td>
-                <td>07/09/2020</td>
-                <td>Rp 4.335.898,88</td>
+                <td>Andika <span class="fa fa-check-circle green ml-2"></span></td>
+                <td>20.000 Kg</td>
+                <td>20.000 Kg</td>
+                <td>Seureubok Teungoh</td>
+                <td>2010</td>
+                <td>Lonsum</td>
+                <td>SHM - 980923211239</td>
+                <td>1.250 Hektar</td>
+                <td>LP2B - 127718297 - Sep 2024</td>
               </tr>
               <tr>
                 <td>3</td>
-                <td>INV/20200804/XX/VIII/597801123</td>
-                <td>Irwan</td>
-                <td>06/09/2020</td>
-                <td>Rp 1.902.222,46</td>
+                <td>Rahmawati <span class="fa fa-check-circle green ml-2"></span></td>
+                <td>15.000 Kg</td>
+                <td>13.780 Kg</td>
+                <td>Seureubok Teungoh</td>
+                <td>2011</td>
+                <td>Lonsum</td>
+                <td>SHM - 980923211239</td>
+                <td>2.000 Hektar<br>1.500 Hektar</td>
+                <td>LP2B - 127718297 - Sep 2021<br>LP2B - 127718297 - Sep 2024</td>
               </tr>
               
               </tbody>
