--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                       </div>
                       <div class="font-title align-items-center col-md-12">
                         <h6 class="col col-md-8 no-padding no-margin">Berita</h6>
-                        <div class="col col-md-4 no-padding">
+                        <div class="custom-filter col col-md-4 no-padding">
                           <div class="input-group input-search">
-                            <input type="text" class="form-control" placeholder="Cari berita" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <input type="sarch" class="form-control" placeholder="Cari berita" aria-label="Recipient's username" aria-describedby="button-addon2">
                             <div class="input-group-append">
                               <button class="btn btn-third" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
                             </div>
