--- a/kelola-pengguna.html
+++ b/kelola-pengguna.html
@@ -204,7 +204,7 @@
                         </div>
                       </div>
                     </label>
-                    <a data-toggle="modal" data-target="#tableFilter" class="btn btn-fifth" type="button"><i class="fa fa-filter"></i></a>
+                    <!-- <a data-toggle="modal" data-target="#tableFilter" class="btn btn-fifth" type="button"><i class="fa fa-filter"></i></a> -->
                   </div>
                 </div>
               </div>
