fix show password

--- a/approval-penerimaan-petani.html
+++ b/approval-penerimaan-petani.html
@@ -243,7 +243,7 @@
                   <td>19.100 Kg</td>
                   <td>Rp 34.991.200</td>
                   <td><span class="fa fa-times-circle danger ml-2"></span></td>
-                  <td><a data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
+                  <td><a type="button" data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
                 </tr>
                 <tr>
                   <td>
@@ -260,7 +260,7 @@
                   <td>28.700 Kg</td>
                   <td>Rp 52.578.400</td>
                   <td><span class="fa fa-check-circle green ml-2"></span></td>
-                  <td><a data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
+                  <td><a type="button" data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
                 </tr>
                 <tr>
                   <td>
@@ -277,7 +277,7 @@
                   <td>19.900 Kg</td>
                   <td>Rp 36.456.800</td>
                   <td><span class="fa fa-check-circle green ml-2"></span></td>
-                  <td><a  data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
+                  <td><a type="button"  data-toggle="modal" data-target="#detailPetani"><span class="fa fa-eye orange ml-2"></span></a></td>
                 </tr>
                 
                 </tbody>
