--- a/kelola-pengguna.html
+++ b/kelola-pengguna.html
@@ -441,17 +441,17 @@
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                           <div class="form-group">
-                            <label for="retypePassword" class="">Konfirmasi Kata Sandi Baru<span class="text-danger"> *</span></label>
-                            <input type="password" id="retypePassword" class="form-control" placeholder="" required value="12345678">
-                            <span toggle="#retypePassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
+                            <label for="inputretypePassword" class="">Konfirmasi Kata Sandi Baru<span class="text-danger"> *</span></label>
+                            <input type="password" id="inputretypePassword" class="form-control" placeholder="" required value="12345678">
+                            <span toggle="#inputretypePassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                         </div>
                         <div class="col-md-6 no-padding-right">
                           <div class="form-group">
-                            <label for="newPassword" class="">Kata Sandi Baru<span class="text-danger"> *</span></label>
-                            <input type="password" id="newPassword" class="form-control" placeholder="" required value="12345678">
-                            <span toggle="#newPassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
+                            <label for="inputnewPassword" class="">Kata Sandi Baru<span class="text-danger"> *</span></label>
+                            <input type="password" id="inputnewPassword" class="form-control" placeholder="" required value="12345678">
+                            <span toggle="#inputnewPassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                         </div>
