--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -474,7 +474,7 @@
       "scrollX": true,
       "bLengthChange": false,
       "searching": false,
-      "bInfo": false,
+      "bInfo": true,
       "language": {
         "search": "_INPUT_",
         "searchPlaceholder": "Pencarian",
