--- a/list-harga.html
+++ b/list-harga.html
@@ -65,7 +65,7 @@
                 <a class="dropdown-item" href="list-hutang.html">Daftar Hutang</a>
             </div>
             <li class="nav-item">
-            <a class="nav-link" href="">List Harga<span class="sr-only">(current)</span></a>
+            <a class="nav-link active" href="">List Harga<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" id="reportDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
