minor fix margin

--- a/kelola-pengguna.html
+++ b/kelola-pengguna.html
@@ -174,7 +174,7 @@
           </div> -->
 
           <div class="card-body">
-            <div class="font-title col-md-12 mb-3">
+            <div class="font-title col-md-12 mb-4">
               <h6 class="no-margin">Daftar Pengguna</h6>
             </div>
             <div class="ml-auto mb-3 no-padding">
@@ -319,7 +319,7 @@
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                           <div class="form-group">
-                            <label for="" class="">No. Rekening<span class="text-danger"> *</span></label>
+                            <label for="" class="">Email<span class="text-danger"> *</span></label>
                             <input type="email" id="" class="form-control" placeholder="" required>
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
@@ -405,7 +405,7 @@
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                           <div class="form-group">
-                            <label for="" class="">No. Rekening<span class="text-danger"> *</span></label>
+                            <label for="" class="">Email<span class="text-danger"> *</span></label>
                             <input type="email" id="" class="form-control" placeholder="" required value="kartika.wati@email.com">
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
@@ -432,7 +432,7 @@
                         </div>
                       </div>
                       <div class="col-md-12 no-padding">
-                        <h6 class="green font-weight-bold mb-3">Kata Sandi</h6>
+                        <h6 class="green font-weight-bold mb-3">Ubah Kata Sandi</h6>
                         <div class="col-md-6 no-padding-left">
                           <div class="form-group">
                             <label for="inputPassword" class="">Kata Sandi Lama<span class="text-danger"> *</span></label>
