--- a/petani.html
+++ b/petani.html
@@ -162,7 +162,7 @@
               <div class="card">
                 <div class="card-body">
                     <div class="font-title col-md-12 mb-4">
-                      <h6 class="no-margin">Daftar Pembayaran</h6>
+                      <h6 class="no-margin">Daftar Data Petani</h6>
                     </div>
                     <div class="custom-filter">
                       <div class="row">
